Change config for generate yaml file Start refactor Test Controller for Swager ref
